Envoy/config/desktopscheduling/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: project_backend_route
            virtual_hosts:
            - name: project_backend
              domains:
              - "*"
              routes:
              - name: "p-short"
                match:
                  prefix: "/p/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: projectmanagement
              - name: "p-long"
                match:
                  prefix: "/projectmanagement-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: projectmanagement
              - name: "c-short"
                match:
                  prefix: "/c/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: collaboration
              - name: "c-long"
                match:
                  prefix: "/collaboration-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: collaboration
              - name: "a-short"
                match:
                  prefix: "/a/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: accounting
              - name: "a-long"
                match:
                  prefix: "/accounting-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: accounting
              - name: "s-short"
                match:
                  prefix: "/s/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: sales
              - name: "s-long"
                match:
                  prefix: "/sales-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: sales
              - name: "u-short"
                match:
                  prefix: "/u/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: capacityutilization
              - name: "u-long"
                match:
                  prefix: "/capacityutilization-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: capacityutilization
              - name: "r-short"
                match:
                  prefix: "/r/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: reporting
              - name: "r-long"
                match:
                  prefix: "/reporting-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: reporting
              - name: "w-short"
                match:
                  prefix: "/w/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: wage
              - name: "w-long"
                match:
                  prefix: "/wage-api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: wage                  
          http_filters:
          - name: envoy.router
          access_log:
          - name: envoy.file_access_log
            filter:
              not_health_check_filter: {}
            config:
              json_format:
                time: "%START_TIME%"
                protocol: "%PROTOCOL%"
                duration: "%DURATION%"
                request_method: "%REQ(:METHOD)%"
                request_host: "%REQ(HOST)%"
                path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                response_flags: "%RESPONSE_FLAGS%"
                route_name: "%ROUTE_NAME%"
                upstream_host: "%UPSTREAM_HOST%"
                upstream_cluster: "%UPSTREAM_CLUSTER%"
                upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
              path: "/tmp/access.log"
  clusters:
  - name: projectmanagement
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: projectmanagement-api
        port_value: 80
  - name: collaboration
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: collaboration-api
        port_value: 80
  - name: accounting
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: accounting-api
        port_value: 80
  - name: accounting-hub
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: accounting-clienthub
        port_value: 80
  - name: sales
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: salesorders-api
        port_value: 80
  - name: capacityutilization
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: capacityutilization-api
        port_value: 80
  - name: typecurve
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: typecurve-api
        port_value: 80
  - name: reporting
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: reporting-api
        port_value: 80
  - name: wage
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: wage-data-api
        port_value: 80
  - name: eventstore
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: eventstore-db
        port_value: 1113
